fixed project input error visibility

--- a/src/style.css
+++ b/src/style.css
@@ -129,6 +129,7 @@ li {
 
 #project-error {
     color: red;
+    visibility: hidden;
 }
 
 h3 {
